# pciebench-netfpga

./: CMakeLists.txt  LICENSE.md  README.md  constants.cmake  wizard.sh
FPGA/: CMakeLists.txt  clean.sh  wizard.sh
FPGA/scripts/: alter_nettype.pl  build_project_sume.sh  build_project_vc709.sh  configure_vivado_2014_4.sh  configure_vivado_2017_4.sh  create_pcie_ref_project.sh  create_pcie_ref_project.tcl  create_pcie_ref_project_2017_4.sh  create_project_sume.tcl  create_project_vc709.tcl  enable_bw_test.pl  implement.tcl  implement_design.sh  program_fpga.sh  program_fpga.tcl
FPGA/source/constr/: pcie_benchmark_sume.xdc  pcie_benchmark_vc709.xdc
FPGA/source/hdl/: pcie_benchmark.sv  pcie_completer_to_bram.sv  pcie_ep_wrapper.sv
FPGA/source/hdl/app/: app.v
FPGA/source/hdl/controller/: msix_manager.v  pcie_controller.sv  pcie_to_axi_reg_requester.sv
FPGA/source/hdl/dma/: dma_benchmarking.sv  dma_engine_manager.v  dma_logic.v  dma_rc_logic.v  dma_rq_d2h_splitter.v  dma_rq_logic.v  dma_sriov_top.v
HOST/: Makefile  restart.sh
HOST/doc/: Doxyfile_driver  Doxyfile_middleware  Doxyfile_user
HOST/driver/: Makefile  nfp.c  nfp.h  nfp_types.h  nfpdma.c  nfpdma.h  nfpioctl.c  nfpioctl.h  nfpmem.c  nfpmem.h  reg.c  reg.h
HOST/include/: ioctl_commands.h
HOST/middleware/: debug.c  debug.h  huge_page.c  huge_page.h  init.c  init.h  nfp_common.h  transfer.c  transfer.h
HOST/scripts/: live_bw.gp  live_lat.gp  test.sh
HOST/user/benchmark/: benchmark.c
HOST/user/rwBar/: rwBar.c
